--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,9 @@
-root = truei
+root = true
 
 [*]
 charset = utf-8
 indent_style = space
 indent_size = 2
-tab_width = 5
 trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
@@ -14,8 +13,8 @@ trim_trailing_whitespace = false
 
 [*.sh]
 indent_style = tab
-tab_width = 4
+indent_size = 4
 
 [Makefile]
 indent_style = tab
-tab_width = 4
+indent_size = 4
