--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,18 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
+# swap panes using Alt-Shift-hjkl without prefix
+bind -n M-H swap-pane -L
+bind -n M-L swap-pane -R
+bind -n M-K swap-pane -U
+bind -n M-J swap-pane -D
+
+# resize panes using Ctrl-Shift-hjkl without prefix
+bind -n C-H resize-pane -L
+bind -n C-L resize-pane -R
+bind -n C-K resize-pane -U
+bind -n C-J resize-pane -D
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
