added git alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
   brdel = branch -D
   pup = push --set-upstream
   fall = fetch --all
+  diffs = diff --staged
 
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
@@ -29,4 +30,4 @@
   diff = auto
   interactive = auto
   status = auto
-  
+
