fixed tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,9 +21,7 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-# swap panes using Alt-Shift-hjkl without prefix
-bind -n M-H swap-pane -L
-bind -n M-L swap-pane -R
+# swap panes using Alt-Shift-jk without prefix
 bind -n M-K swap-pane -U
 bind -n M-J swap-pane -D
 
@@ -40,7 +38,7 @@ set -g mouse on
 #set -g history-limit 10000
 
 # status bar
-set -g status-position bottom                        
+set -g status-position bottom
 set -g status-justify left
 set -g status-style 'fg=colour28 bg=colour0'
 set -g status-left ''
