--- a/.inputrc
+++ b/.inputrc
@@ -4,5 +4,6 @@ set bell-style none
 # editing mode
 set editing-mode vi
 set show-mode-in-prompt on
-set vi-ins-mode-string "\e[35m(i) "
-set vi-cmd-mode-string "\e[35m(c) "
+set emacs-mode-string  "\1\e[35;40m\2@"
+set vi-ins-mode-string "\1\e[35;40m\2+"
+set vi-cmd-mode-string "\1\e[35;40m\2#"
