--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,8 @@ indent_size = 4
 [Makefile]
 indent_style = tab
 indent_size = 4
+
+[*.{lisp,clj,el,scm}]
+indent_style = space
+indent_size = none
+tab_width = none
