various updates from the pi instllation

--- a/.emulationstation/es_systems.cfg
+++ b/.emulationstation/es_systems.cfg
@@ -9,7 +9,7 @@ vi:syntax=xml
   <fullname>Super Nintendo Entertainment System</fullname>
   <path>~/roms/snes</path>
   <extension>.smc .sfc .SMC .SFC</extension>
-  <command>snesemulator %ROM%</command>
+  <command>mame %ROM%</command>
   <platform>snes</platform>
   <theme>snes</theme>
 </system>
@@ -18,10 +18,20 @@ vi:syntax=xml
   <name>mame</name>
   <fullname>Multiple Arcade Machine Emulator</fullname>
   <path>~/roms/mame</path>
-  <extension>.zio</extension>
+  <extension>.zip</extension>
   <command>mame %ROM%</command>
   <platform>arcade</platform>
   <theme>mame</theme>
+</system>
+
+<system>
+  <name>neogeo</name>
+  <fullname>Neogeo</fullname>
+  <path>~/roms/neogeo</path>
+  <extension>.zip</extension>
+  <command>mame %ROM%</command>
+  <platform>neogeo</platform>
+  <theme>neogeo</theme>
 </system>
 
 </systemList>
