better settings for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,24 @@
 # Improve colors
 set -g default-terminal 'screen-256color'
 
-# Remap prefix from 'C-b' to 'C-a'
+# display status bar messages for longer
+set-option -g display-time 3000
+
+# Set vi keys
+set-window-option -g mode-keys vi
+
+# Remap prefix
+# e.g. to remap from 'C-b' to 'C-a'
 #unbind C-b
 #set-option -g prefix C-a
 #bind-key C-a send-prefix
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+# reload config file and display message
+# (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced!'
+
+# start numbering windows from 1
+set -g base-index 1
 
 # split panes using | and -
 unbind '"'
@@ -15,21 +26,40 @@ unbind %
 bind | split-window -h
 bind - split-window -v
 
-# switch panes using Alt-hjkl without prefix
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+# switch panes using hjkl
+unbind LEFT
+unbind RIGTH
+unbind UP
+unbind DOWN
+unbind l
+bind -r h select-pane -L
+bind -r l select-pane -R
+bind -r k select-pane -U
+bind -r j select-pane -D
 
-# swap panes using Alt-Shift-jk without prefix
-bind -n M-K swap-pane -U
-bind -n M-J swap-pane -D
+# swap panes using Shift-jk
+bind K swap-pane -U
+bind J swap-pane -D
 
-# resize panes using Ctrl-Shift-hjkl without prefix
-bind -n C-H resize-pane -L
-bind -n C-L resize-pane -R
-bind -n C-K resize-pane -U
-bind -n C-J resize-pane -D
+# resize panes using Ctrl-hjkl
+unbind C-LEFT
+unbind C-RIGHT
+unbind C-UP
+unbind C-DOWN
+bind -r C-h resize-pane -L
+bind -r C-l resize-pane -R
+bind -r C-k resize-pane -U
+bind -r C-j resize-pane -D
+
+# resize panes using Alt-hjkl
+unbind M-LEFT
+unbind M-RIGHT
+unbind M-UP
+unbind M-DOWN
+bind -r M-h resize-pane -L 5
+bind -r M-l resize-pane -R 5
+bind -r M-k resize-pane -U 5
+bind -r M-j resize-pane -D 5
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -40,9 +70,9 @@ set -g mouse on
 # status bar
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'fg=colour28 bg=colour0'
+set -g status-style 'fg=colour2 bg=colour0'
 set -g status-left ''
-set -g status-right '# %d/%m %H:%M:%S'
+set -g status-right ' # %d/%m %H:%M'
 
 setw -g window-status-current-format ' #I#[fg=colour240]:#[fg=colour255]#W#[fg=colour255]#F '
 setw -g window-status-format ' #I#[fg=colour240]:#[fg=colour245]#W#[fg=colour245]#F '
@@ -50,6 +80,9 @@ setw -g window-status-format ' #I#[fg=colour240]:#[fg=colour245]#W#[fg=colour245
 # panes
 set -g pane-border-style 'fg=colour240 bg=colour0'
 set -g pane-active-border-style 'fg=colour255 bg=colour0'
+
+# messages
+set -g message-style 'fg=colour226 bg=colour240 bold'
 
 # loud or quiet?
 #set -g visual-activity off
@@ -64,5 +97,3 @@ set -g pane-active-border-style 'fg=colour255 bg=colour0'
 
 #setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
-# messages
-#set -g message-style 'fg=colour232 bg=colour16 bold'
