--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,10 +27,10 @@ bind | split-window -h
 bind - split-window -v
 
 # switch panes using hjkl
-unbind LEFT
-unbind RIGTH
-unbind UP
-unbind DOWN
+unbind Left
+unbind Right
+unbind Up
+unbind Down
 unbind l
 bind -r h select-pane -L
 bind -r l select-pane -R
@@ -42,20 +42,20 @@ bind K swap-pane -U
 bind J swap-pane -D
 
 # resize panes using Ctrl-hjkl
-unbind C-LEFT
-unbind C-RIGHT
-unbind C-UP
-unbind C-DOWN
+unbind C-Left
+unbind C-Right
+unbind C-Up
+unbind C-Down
 bind -r C-h resize-pane -L
 bind -r C-l resize-pane -R
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
 
 # resize panes using Alt-hjkl
-unbind M-LEFT
-unbind M-RIGHT
-unbind M-UP
-unbind M-DOWN
+unbind M-Left
+unbind M-Right
+unbind M-Up
+unbind M-Down
 bind -r M-h resize-pane -L 5
 bind -r M-l resize-pane -R 5
 bind -r M-k resize-pane -U 5
