--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
   co = checkout
   cobr = checkout -b
   cm = commit
+  h = help
   st = status
   br = branch -av
   brdel = branch -D
@@ -35,7 +36,7 @@
   status = auto
 
 [instaweb]
-  # httpd = lighttpd
+  local = true
 
 [pull]
   rebase = false
