disable auto update of window name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced!'
 # start numbering windows from 1
 set -g base-index 1
 
+# do not rename automatically windows
+set-option -g automatic-rename off
+
 # split panes using | and -
 unbind '"'
 unbind %
