copy-paste in vi mode for the tmux buffers

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ set-option -g display-time 3000
 
 # Set vi keys
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Remap prefix
 # e.g. to remap from 'C-b' to 'C-a'
