--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,11 @@
 # Improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'xterm-256color'
 
 # display status bar messages for longer
 set-option -g display-time 3000
+
+# reduce escape time for vim
+set -sg escape-time 10
 
 # Set vi keys
 set-window-option -g mode-keys vi
