--- a/.inputrc
+++ b/.inputrc
@@ -7,3 +7,7 @@ set show-mode-in-prompt on
 set emacs-mode-string  "\1\e[35;40m\2@"
 set vi-ins-mode-string "\1\e[35;40m\2+"
 set vi-cmd-mode-string "\1\e[35;40m\2#"
+
+# other
+set blink-matching-paren on
+
