--- a/.inputrc
+++ b/.inputrc
@@ -4,9 +4,9 @@ set bell-style none
 # editing mode
 set editing-mode vi
 set show-mode-in-prompt on
-set emacs-mode-string  "\1\e[35;40m\2@"
-set vi-ins-mode-string "\1\e[35;40m\2+"
-set vi-cmd-mode-string "\1\e[35;40m\2#"
+set emacs-mode-string  "\1\e[35;40m\2@\1\e[37;40m"
+set vi-ins-mode-string "\1\e[35;40m\2+\1\e[37;40m"
+set vi-cmd-mode-string "\1\e[35;40m\2#\1\e[37;40m"
 
 # other
 set blink-matching-paren on
